Simple user login for debug purposes

--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,14 @@ body {
 
 }
 
+#Menu ul {
+    list-style-type: none;
+}
+
+#Menu ul li { 
+    display: inline;
+}
+
 #Content,
 #Footer {
     border: 1px solid black;
